# TheGaunlet

./: .gitignore  Anchor.toml  README.md  package.json  tsconfig.json
lib/prog_common/src/: errors.rs
programs/challenger/: Cargo.toml
programs/challenger/src/: lib.rs
programs/challenger/src/instructions/: add_moderator.rs  close_account.rs  close_crux.rs  create_challenge.rs  create_submission.rs  create_user_profile.rs  delete_challenge.rs  delete_submission.rs  delete_submission_moderator.rs  delete_user_profile.rs  edit_challenge.rs  edit_submission.rs  edit_user_profile.rs  evaluate_submission.rs  init_crux.rs  mod.rs  payout_from_treasury.rs  remove_moderator.rs  update_crux_params.rs
programs/challenger/src/state/: challenge.rs  crux.rs  crux_counts.rs  crux_fees.rs  mod.rs  submission.rs  tags.rs  user_profile.rs
src/: challenger.cli.ts  challenger.client.ts  challenger.pda.ts  challenger.types.ts  index.ts
src/cli_configs/devnet/: challengeConfig.ts  cruxConfig.ts  networkConfig.ts  submissionConfig.ts
