[package]
name = "challeger"
version = "0.1.0"
description = "challenger program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "challenger"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
prog_common = {path='../../lib/prog_common'}
proc_macros = {path='../../lib/proc_macros'}
